--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
   <!-- The Basics -->
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-xpframework-plugin</artifactId>
-  <version>1.1</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <!-- More Project Information -->
   <name>Maven XP-Framework plugin</name>
   <description>Maven 2/3 plugin to manage the lifecycle of an XP-Framework project</description>
-  <url>https://github.com/xp-framework/xp-contrib</url>
+  <url>https://github.com/xp-forge/maven-xpframework-plugin</url>
   <inceptionYear>2011</inceptionYear>
   <organization>
     <name>XP-Framework Team</name>
@@ -32,12 +32,11 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  <developers>
-    <developer>
-      <name>Marius Rosoiu</name>
-      <email>marius.rosoiu@1and1.ro</email>
-    </developer>
-  </developers>
+  <scm>
+    <connection>scm:git:git://github.com/xp-forge/maven-xpframework-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:xp-forge/maven-xpframework-plugin.git</developerConnection>
+    <url>https://github.com/xp-forge/maven-xpframework-plugin</url>
+  </scm>
 
   <!-- Environment Settings -->
   <prerequisites>
@@ -54,6 +53,32 @@
           <source>1.5</source>
           <target>1.5</target>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.8.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>com.mycila.maven-license-plugin</groupId>
@@ -85,6 +110,7 @@
     </plugins>
   </build>
 
+  <!-- Dependencies -->
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
