Change groupId from "org.apache.maven.plugins" to "net.xp-forge.maven.plugins" Use Sonatype OSS parent instead of Apache Add source and javadoc artifacts

--- a/examples/lib-common/pom.xml
+++ b/examples/lib-common/pom.xml
@@ -13,9 +13,9 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
+        <groupId>net.xp-forge.maven.plugins</groupId>
         <artifactId>maven-xpframework-plugin</artifactId>
-        <version>1.1</version>
+        <version>2.0.0</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
