--- a/archetypes/maven-archetype-xp-library/pom.xml
+++ b/archetypes/maven-archetype-xp-library/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <!-- The basics -->
-  <groupId>org.apache.maven.archetypes</groupId>
+  <groupId>net.xp-forge.maven.archetypes</groupId>
   <artifactId>maven-archetype-xp-library</artifactId>
   <packaging>jar</packaging>
   <version>1.0.0</version>
@@ -12,7 +12,7 @@
   <!-- More project information -->
   <name>Maven archetype for XP-Framework library written in XP-language</name>
   <description>Maven archetype to generate a template XP-Framework library written in XP-language</description>
-  <url>https://github.com/xp-framework/xp-contrib</url>
+  <url>https://github.com/xp-forge/maven-xpframework-plugin</url>
   <inceptionYear>2012</inceptionYear>
   <organization>
     <name>XP-Framework Team</name>
@@ -25,10 +25,4 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  <developers>
-    <developer>
-      <name>Marius Rosoiu</name>
-      <email>marius.rosoiu@1and1.ro</email>
-    </developer>
-  </developers>
 </project>
