--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <!-- The Basics -->
   <groupId>net.xp-forge.maven.plugins</groupId>
   <artifactId>maven-xpframework-plugin</artifactId>
-  <version>2.0.0</version>
+  <version>2.0.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <!-- More Project Information -->
