--- a/examples/app-hello/pom.xml
+++ b/examples/app-hello/pom.xml
@@ -12,10 +12,32 @@
 
   <dependencies>
     <dependency>
+      <groupId>net.xp-framework</groupId>
+      <artifactId>core</artifactId>
+      <version>5.8.2</version>
+      <type>xar</type>
+      <optional>false</optional>
+   </dependency>
+   <dependency>
+     <groupId>net.xp-framework</groupId>
+     <artifactId>tools</artifactId>
+     <version>5.8.2</version>
+     <type>xar</type>
+     <optional>false</optional>
+   </dependency>
+   <dependency>
+     <groupId>net.xp-framework</groupId>
+     <artifactId>language</artifactId>
+     <version>5.8.2</version>
+     <type>xar</type>
+     <optional>false</optional>
+   </dependency>
+    <dependency>
       <groupId>org.company.lib</groupId>
       <artifactId>lib-common</artifactId>
       <version>1.0</version>
       <type>xar</type>
+      <classifier>patch</classifier>
       <optional>false</optional>
    </dependency>
   </dependencies>
@@ -25,7 +47,7 @@
       <plugin>
         <groupId>net.xp-forge.maven.plugins</groupId>
         <artifactId>xp-maven-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.1</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
