--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <!-- The Basics -->
   <groupId>net.xp-forge.maven.plugins</groupId>
   <artifactId>xp-maven-plugin</artifactId>
-  <version>3.0.1-SNAPSHOT</version>
+  <version>3.0.1</version>
   <packaging>maven-plugin</packaging>
 
   <!-- More Project Information -->
@@ -49,7 +49,7 @@
           <target>1.5</target>
         </configuration>
       </plugin>
-      <plugin>
+      <!--plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>2.1.2</version>
@@ -74,7 +74,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
+      </plugin-->
       <plugin>
         <groupId>com.mycila.maven-license-plugin</groupId>
         <artifactId>maven-license-plugin</artifactId>
@@ -133,6 +133,11 @@
       <version>1.0</version>
     </dependency>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-exec</artifactId>
       <version>1.0.1</version>
@@ -141,6 +146,11 @@
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
       <version>2.0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>net.xp-forge.xar</groupId>
+      <artifactId>xarlib</artifactId>
+      <version>2.0</version>
     </dependency>
   </dependencies>
 
