--- a/examples/lib-common/pom.xml
+++ b/examples/lib-common/pom.xml
@@ -13,24 +13,17 @@
   <dependencies>
     <dependency>
       <groupId>net.xp-framework</groupId>
-      <artifactId>core</artifactId>
-      <version>5.8.2</version>
-      <type>xar</type>
-      <optional>false</optional>
-   </dependency>
-   <dependency>
-     <groupId>net.xp-framework</groupId>
-     <artifactId>tools</artifactId>
-     <version>5.8.2</version>
-     <type>xar</type>
-     <optional>false</optional>
+      <artifactId>pom</artifactId>
+      <version>5.8.7</version>
+      <type>pom</type>
+      <scope>import</scope>
    </dependency>
    <dependency>
      <groupId>net.xp-framework</groupId>
      <artifactId>language</artifactId>
-     <version>5.8.2</version>
+     <version>5.8.6</version>
      <type>xar</type>
-     <optional>false</optional>
+     <scope>compile</scope>
    </dependency>
   </dependencies>
 
@@ -39,7 +32,7 @@
       <plugin>
         <groupId>net.xp-forge.maven.plugins</groupId>
         <artifactId>xp-maven-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.2-SNAPSHOT</version>
         <extensions>true</extensions>
         <configuration>
           <classifier>patch</classifier>
