--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <packaging>maven-plugin</packaging>
 
   <!-- More Project Information -->
-  <name>Maven plugin for XP-Framework</name>
+  <name>XP-Framework Maven plugin</name>
   <description>Maven 2/3 plugin to manage the lifecycle of an XP-Framework project</description>
   <url>https://github.com/xp-forge/xp-maven-plugin</url>
   <inceptionYear>2011</inceptionYear>
@@ -26,7 +26,7 @@
   </organization>
   <licenses>
     <license>
-      <name>BSD</name>
+      <name>3-Clause BSD License</name>
       <url>http://www.opensource.org/licenses/BSD-3-Clause</url>
       <distribution>repo</distribution>
     </license>
@@ -53,38 +53,12 @@
           <target>1.5</target>
         </configuration>
       </plugin>
-      <!--plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8.1</version>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin-->
       <plugin>
         <groupId>com.mycila.maven-license-plugin</groupId>
         <artifactId>maven-license-plugin</artifactId>
         <version>1.9.0</version>
         <configuration>
-          <header>src/etc/header.txt</header>
+          <header>src/license/header.txt</header>
           <strictCheck>true</strictCheck>
           <includes>
             <include>src/main/java/**</include>
