--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <!-- The Basics -->
   <groupId>net.xp-forge.maven.plugins</groupId>
   <artifactId>xp-maven-plugin</artifactId>
-  <version>3.1.6</version>
+  <version>3.1.7-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <!-- More Project Information -->
