--- a/examples/lib-common/pom.xml
+++ b/examples/lib-common/pom.xml
@@ -32,7 +32,7 @@
       <plugin>
         <groupId>net.xp-forge.maven.plugins</groupId>
         <artifactId>xp-maven-plugin</artifactId>
-        <version>3.1.9-SNAPSHOT</version>
+        <version>3.2.0-SNAPSHOT</version>
         <extensions>true</extensions>
         <configuration>
           <classifier>patch</classifier>
@@ -40,4 +40,11 @@
       </plugin>
     </plugins>
   </build>
+
+  <distributionManagement>
+    <repository>
+    <id>fictive-repository</id>
+    <url>file:///tmp/</url>
+    </repository>
+  </distributionManagement>
 </project>
