--- a/examples/lib-common/src/test/config/unittest/main.ini
+++ b/examples/lib-common/src/test/config/unittest/main.ini
@@ -1,5 +1,5 @@
 [this]
-description="Main tests"
+description="Unit tests"
 
 [main-class]
 class="org.company.lib.common.unittest.util.GreetingTest"
